{
  "version": 4,
  "terraform_version": "0.14.3",
  "serial": 39,
  "lineage": "bdf9c5f6-4ca5-a3a8-01c6-a6cafcf397df",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_in_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e80a462ede03e653",
            "arn": "arn:aws:ec2:eu-west-2:618388817220:instance/i-0478d57e9781cbec1",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0478d57e9781cbec1",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e7dd0a381383c8b9",
            "private_dns": "ip-10-0-1-82.eu-west-2.compute.internal",
            "private_ip": "10.0.1.82",
            "public_dns": "ec2-3-8-124-214.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.8.124.214",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08f6265e34e659d1e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05bc92fb24e6172f8",
            "tags": {
              "Name": "Instance in eu-west-2a"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0eb4872cc67621338"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.test_vpc_igw",
            "aws_security_group.allow_http",
            "aws_subnet.pub_subnet_2a",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_in_2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e80a462ede03e653",
            "arn": "arn:aws:ec2:eu-west-2:618388817220:instance/i-0bbba4019d5442dcf",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bbba4019d5442dcf",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-023371ec0bb9a8410",
            "private_dns": "ip-10-0-2-23.eu-west-2.compute.internal",
            "private_ip": "10.0.2.23",
            "public_dns": "ec2-18-133-159-127.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.133.159.127",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ef7f275dd2d07b40",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09a5b38a6b7953e3f",
            "tags": {
              "Name": "Instance in eu-west-2a"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0eb4872cc67621338"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.test_vpc_igw",
            "aws_security_group.allow_http",
            "aws_subnet.pub_subnet_2b",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "test_vpc_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:618388817220:internet-gateway/igw-03945ab9c7554b642",
            "id": "igw-03945ab9c7554b642",
            "owner_id": "618388817220",
            "tags": {
              "Name": "Test VPC Internet Gateway"
            },
            "vpc_id": "vpc-038c873324ddbdb5b"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "test_nlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:618388817220:loadbalancer/net/test-nlb/63edf863036a669c",
            "arn_suffix": "net/test-nlb/63edf863036a669c",
            "dns_name": "test-nlb-63edf863036a669c.elb.eu-west-2.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:618388817220:loadbalancer/net/test-nlb/63edf863036a669c",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "test-nlb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05bc92fb24e6172f8"
              },
              {
                "subnet_id": "subnet-09a5b38a6b7953e3f"
              }
            ],
            "subnets": [
              "subnet-05bc92fb24e6172f8",
              "subnet-09a5b38a6b7953e3f"
            ],
            "tags": {
              "Environment": "production"
            },
            "vpc_id": "vpc-038c873324ddbdb5b",
            "zone_id": "ZD4D7Y8KGAS4G"
          },
          "dependencies": [
            "aws_internet_gateway.test_vpc_igw",
            "aws_subnet.pub_subnet_2a",
            "aws_subnet.pub_subnet_2b",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "test_nlb_tg_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:618388817220:targetgroup/Test-nlb-tg/322a06680c5d236c",
            "arn_suffix": "targetgroup/Test-nlb-tg/322a06680c5d236c",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:618388817220:targetgroup/Test-nlb-tg/322a06680c5d236c",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "Test-nlb-tg",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-038c873324ddbdb5b"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "test_vpc_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-05f29179bffcf7812",
            "owner_id": "618388817220",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03945ab9c7554b642",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public subnets rt for Test VPC"
            },
            "vpc_id": "vpc-038c873324ddbdb5b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.test_vpc_igw",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "test_vpc_2a_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09f9cbefa3756f7c5",
            "route_table_id": "rtb-05f29179bffcf7812",
            "subnet_id": "subnet-05bc92fb24e6172f8"
          },
          "dependencies": [
            "aws_internet_gateway.test_vpc_igw",
            "aws_route_table.test_vpc_public",
            "aws_subnet.pub_subnet_2a",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "test_vpc_2b_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01384eafe32c706f9",
            "route_table_id": "rtb-05f29179bffcf7812",
            "subnet_id": "subnet-09a5b38a6b7953e3f"
          },
          "dependencies": [
            "aws_internet_gateway.test_vpc_igw",
            "aws_route_table.test_vpc_public",
            "aws_subnet.pub_subnet_2b",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:618388817220:security-group/sg-0eb4872cc67621338",
            "description": "Allow HTTP inbound connections",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eb4872cc67621338",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http",
            "name_prefix": "",
            "owner_id": "618388817220",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow HTTP Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-038c873324ddbdb5b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_subnet_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:618388817220:subnet/subnet-05bc92fb24e6172f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-05bc92fb24e6172f8",
            "map_public_ip_on_launch": true,
            "owner_id": "618388817220",
            "tags": {
              "Name": "Public subnet eu-west-2a"
            },
            "vpc_id": "vpc-038c873324ddbdb5b"
          },
          "dependencies": [
            "aws_internet_gateway.test_vpc_igw",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_subnet_2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:618388817220:subnet/subnet-09a5b38a6b7953e3f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-09a5b38a6b7953e3f",
            "map_public_ip_on_launch": true,
            "owner_id": "618388817220",
            "tags": {
              "Name": "Public subnet eu-west-2b"
            },
            "vpc_id": "vpc-038c873324ddbdb5b"
          },
          "dependencies": [
            "aws_internet_gateway.test_vpc_igw",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:618388817220:vpc/vpc-038c873324ddbdb5b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04fede4dde139050b",
            "default_route_table_id": "rtb-05fd8336fdae89b07",
            "default_security_group_id": "sg-04b027365e1997ebd",
            "dhcp_options_id": "dopt-bfe7b6d7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-038c873324ddbdb5b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05fd8336fdae89b07",
            "owner_id": "618388817220",
            "tags": {
              "Name": "Test vpc"
            }
          }
        }
      ]
    }
  ]
}